simulation/multi-cluster/multi-network/client-on-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: client1
  namespace: app-istio
  labels:
    app: client1
    service: client1
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: client1
---
apiVersion: v1
kind: Service
metadata:
  name: client2
  namespace: app-istio
  labels:
    app: client2
    service: client2
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: client2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client1
  namespace: app-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client1
      version: v1
  template:
    metadata:
      labels:
        app: client1
        version: v1
    spec:
      serviceAccountName: client1
      containers:
        - image: daime/http-dump
          imagePullPolicy: IfNotPresent
          name: client1
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client2
  namespace: app-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client2
      version: v1
  template:
    metadata:
      labels:
        app: client2
        version: v1
    spec:
      serviceAccountName: client2
      containers:
        - image: daime/http-dump
          imagePullPolicy: IfNotPresent
          name: client2
          ports:
            - containerPort: 80
